# nextjs-fastapi-ai

./: .gitignore  docker-compose.yml
backend/: .env  README.md  pyproject.toml
backend/backend/: main.py  serve.py
backend/backend/ai/: chain.py
backend/backend/ai/agent/: assistant_add_custom_tool.py  fastapi.py  function_calling.py  function_callint.py  qwen_agent_example.py
backend/backend/ai/tools/: weather.py
backend/backend/api/: mian.py
backend/backend/api/routes/: demo.py  prisma.py  stream.py  waypoints.json
backend/backend/core/: initPrisma.py
backend/prisma/: partial_types.py  schema.prisma
frontend/: pnpm-lock.yaml
frontend/app/: agent.tsx
frontend/utils/: server.tsx
qwen_agent_examples/: assistant_add_custom_tool.py
qwen_agent_examples/workspace/tools/code_interpreter/: kernel_connection_file_13dcc150-e69b-4d76-9733-e55c0aa657e5_55082.json
qwen_agent_examples/workspace/tools/doc_parser/: bb7e2f4a265642a34290f5939d2347b351bd31f61b8b458cfef2cd6d512d0f9a_without_chunking
qwen_agent_examples/workspace/tools/simple_doc_parser/: bb7e2f4a265642a34290f5939d2347b351bd31f61b8b458cfef2cd6d512d0f9a_ori
