[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["张为杰 <zhangwj0520@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
start = "backend.serve:start"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
prisma = "^0.13.1"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
