[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["zhangweijie <zhangwj0520@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
start = "backend.serve:start"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
prisma = "^0.13.1"
fastapi = "^0.111.0"
langchain = "^0.2.5"
langchain-openai = "^0.1.9"
langgraph = "^0.1.1"
langserve = {extras = ["all"], version = "^0.2.2"}
qwen-agent = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
